--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "README.md"
   ],
   "scripts": {
-    "start": "rm -fr lib/ && babel src --out-dir lib --ignore='__tests__'",
-    "test": "jest --verbose",
+    "start": "rm -fr lib/ && babel src --out-dir lib",
     "pub": "npm test && npm start && npm publish",
     "dev": "webpack-dev-server --content-base dist/"
   },
@@ -38,47 +37,32 @@
   },
   "homepage": "https://github.com/asbjornh/react-scroll-transition#readme",
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
-    "babel-eslint": "^8.0.2",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.9.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.28.10",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "easing-functions": "^1.0.1",
-    "eslint": "^4.12.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-jest": "^21.3.2",
-    "eslint-plugin-react": "^7.5.1",
-    "expose-loader": "^0.7.4",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "jest-cli": "^22.4.3",
+    "eslint": "^5.12.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-react": "^7.12.3",
+    "mini-css-extract-plugin": "^0.5.0",
     "prop-types": "^15.6.0",
     "react": "^16.3.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^16.3.0",
     "static-site-generator-webpack-plugin": "^3.4.1",
-    "style-loader": "^0.20.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.5"
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.1.14"
   },
   "peerDependencies": {
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
-  },
-  "jest": {
-    "rootDir": "",
-    "modulePathIgnorePatterns": [
-      "<rootDir>/node_modules/"
-    ],
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/"
-    ],
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/"
-    ]
   }
 }
